[gd_scene load_steps=12 format=2]

[ext_resource path="res://src/levels/levelBegin.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/entities/playerPlaceholder.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/screens/Scripts/LevelManager.gd" type="Script" id=3]
[ext_resource path="res://src/screens/Scripts/MainLevels.gd" type="Script" id=4]
[ext_resource path="res://src/screens/MovingBoundary.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/tileset_modern_old.tres" type="TileSet" id=6]
[ext_resource path="res://assets/tileset_modern_2.tres" type="TileSet" id=7]
[ext_resource path="res://assets/bg.png" type="Texture" id=8]
[ext_resource path="res://src/screens/UIinLevel.tscn" type="PackedScene" id=9]
[ext_resource path="res://src/obstacles/spike.tscn" type="PackedScene" id=10]
[ext_resource path="res://src/collectibles/coin.tscn" type="PackedScene" id=11]

[node name="Main" type="Node2D"]
position = Vector2( -1, 0 )
script = ExtResource( 4 )

[node name="bg3" type="TextureRect" parent="."]
margin_left = -1619.56
margin_top = -3.5636
margin_right = 2797.44
margin_bottom = 1028.44
texture = ExtResource( 8 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 281.98, 580.814 )
hp = 90
cancer = 5

[node name="LevelManager" type="Node2D" parent="."]
script = ExtResource( 3 )

[node name="levels0" parent="LevelManager" instance=ExtResource( 1 )]
visible = false
position = Vector2( -2.11902, 0 )

[node name="levels02" type="Node2D" parent="LevelManager"]
position = Vector2( -2.11902, 0 )

[node name="TileMap2" type="TileMap" parent="LevelManager/levels02"]
position = Vector2( -1, 0 )
tile_set = ExtResource( 7 )
cell_size = Vector2( 80, 80 )
format = 1
tile_data = PoolIntArray( 262173, 0, 5, 262174, 0, 7, 589824, 0, 65536, 589825, 0, 2, 589826, 0, 2, 589827, 0, 2, 589828, 0, 2, 589829, 0, 2, 589830, 0, 2, 589831, 0, 2, 589832, 0, 2, 589833, 0, 2, 589834, 0, 2, 589835, 0, 2, 589836, 0, 2, 589837, 0, 2, 589838, 0, 2, 589839, 0, 2, 589840, 0, 2, 589841, 0, 2, 589842, 0, 2, 589843, 0, 2, 589844, 0, 2, 589845, 0, 65540, 589849, 0, 65536, 589850, 0, 2, 589851, 0, 2, 589852, 0, 2, 589853, 0, 2, 589854, 0, 3, 655360, 0, 131072, 655361, 0, 65538, 655362, 0, 65538, 655363, 0, 65538, 655364, 0, 65538, 655365, 0, 65538, 655366, 0, 65538, 655367, 0, 65538, 655368, 0, 65538, 655369, 0, 65538, 655370, 0, 65538, 655371, 0, 65538, 655372, 0, 65538, 655373, 0, 65538, 655374, 0, 65538, 655375, 0, 65538, 655376, 0, 65538, 655377, 0, 65538, 655378, 0, 65538, 655379, 0, 65538, 655380, 0, 65538, 655381, 0, 131076, 655385, 0, 131072, 655386, 0, 65538, 655387, 0, 65538, 655388, 0, 65538, 655389, 0, 65538, 655390, 0, 131076, 720896, 0, 131072, 720897, 0, 65538, 720898, 0, 65538, 720899, 0, 65538, 720900, 0, 65538, 720901, 0, 65538, 720902, 0, 65538, 720903, 0, 65538, 720904, 0, 65538, 720905, 0, 65538, 720906, 0, 65538, 720907, 0, 65538, 720908, 0, 65538, 720909, 0, 65538, 720910, 0, 65538, 720911, 0, 65538, 720912, 0, 65538, 720913, 0, 65538, 720914, 0, 65538, 720915, 0, 65538, 720916, 0, 65538, 720917, 0, 65539, 720918, 0, 2, 720919, 0, 2, 720920, 0, 2, 720921, 0, 65537, 720922, 0, 65538, 720923, 0, 65538, 720924, 0, 65538, 720925, 0, 65538, 720926, 0, 131076, 786432, 0, 262145, 786433, 0, 196609, 786434, 0, 65538, 786435, 0, 65538, 786436, 0, 65538, 786437, 0, 65538, 786438, 0, 65538, 786439, 0, 65538, 786440, 0, 65538, 786441, 0, 65538, 786442, 0, 65538, 786443, 0, 65538, 786444, 0, 65538, 786445, 0, 65538, 786446, 0, 65538, 786447, 0, 65538, 786448, 0, 65538, 786449, 0, 65538, 786450, 0, 65538, 786451, 0, 65538, 786452, 0, 65538, 786453, 0, 65538, 786454, 0, 65538, 786455, 0, 65538, 786456, 0, 65538, 786457, 0, 65538, 786458, 0, 65538, 786459, 0, 65538, 786460, 0, 65538, 786461, 0, 196613, 786462, 0, 196612, 851969, 0, 262145, 851970, 0, 262146, 851971, 0, 262146, 851972, 0, 262146, 851973, 0, 262146, 851974, 0, 262146, 851975, 0, 262146, 851976, 0, 262146, 851977, 0, 262146, 851978, 0, 262146, 851979, 0, 262146, 851980, 0, 262146, 851981, 0, 262146, 851982, 0, 262146, 851983, 0, 262146, 851984, 0, 262146, 851985, 0, 262146, 851986, 0, 262146, 851987, 0, 262146, 851988, 0, 262146, 851989, 0, 262146, 851990, 0, 262146, 851991, 0, 262146, 851992, 0, 262146, 851993, 0, 262146, 851994, 0, 262146, 851995, 0, 262146, 851996, 0, 262146, 851997, 0, 262147 )

[node name="TileMapEdge" type="TileMap" parent="LevelManager/levels02"]
tile_set = ExtResource( 6 )
cell_size = Vector2( 80, 80 )
collision_layer = 4
collision_mask = 0
format = 1
tile_data = PoolIntArray( 262173, 23, 0, 262174, 22, 0, 589824, 1, 0, 589854, 1, 0, 655360, 4, 0, 655390, 4, 0, 720896, 4, 0, 720897, 4, 0, 720926, 4, 0, 786432, 4, 0, 786433, 4, 0, 786462, 4, 0 )

[node name="obstacles" type="Node2D" parent="LevelManager/levels02"]

[node name="Spike2" parent="LevelManager/levels02/obstacles" instance=ExtResource( 10 )]
position = Vector2( 1939.12, 880 )
random_val = 101

[node name="Spike" parent="LevelManager/levels02/obstacles" instance=ExtResource( 10 )]
position = Vector2( 1819.12, 880 )
random_val = 101

[node name="Coin" parent="LevelManager/levels02" instance=ExtResource( 11 )]
position = Vector2( 1883.12, 792 )

[node name="MovingBoundary" parent="." instance=ExtResource( 5 )]

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="CanvasLayer" parent="." instance=ExtResource( 9 )]

[connection signal="timeout" from="Timer" to="Player" method="_on_Timer_timeout"]
